# space

./: Cargo.toml
assets/meshes/: asteroid.blend  asteroid.glb  asteroid_1.blend  asteroid_1.blend1  asteroid_1.glb  spaceship.blend  spaceship.glb
assets/shaders/: chromatic_abberation.wgsl  outline.wgsl  procedural_skybox.wgsl  volumetric_nebula.wgsl
assets/shaders/noise/: hash.wgsl  value.wgsl  voronoi.wgsl
src/: main.rs
src/core/: mod.rs  projectile.rs  stats.rs
src/plugins/: asteroid.rs  chromatic_abberation.rs  main_camera.rs  mod.rs  outline.rs  player.rs  player_controller.rs  procedural_skybox.rs  projectile.rs  scene_lighting.rs  space_particles.rs  upgrade.rs  volumetric_nebula.rs  weapon.rs
src/resources/: mod.rs  upgrade.rs  weapons.rs
src/systems/: mod.rs  player_movement.rs  spawn_asteroids.rs
