[package]
name = "space"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = [
  "bevy_dev_tools",
  "dynamic_linking",
  "file_watcher",
] }
bevy_rapier3d = "0.27.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
