[package]
name = "space"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3", features = [
  "bevy_dev_tools",
  "dynamic_linking",
  "file_watcher",
] }
avian3d = "0.4"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
